--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 gunicorn-error-log
 __localcode
 /data/
-/.vscode/
+/.gitignore/
 
 # Django #
 *.log
@@ -111,6 +111,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
 
 # mkdocs documentation
 /site
